# slh

./: .gitignore  README.md  notes.md  pyproject.toml
plugins/c/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  run  setup.py
plugins/c/example/: main.c
plugins/c/include/slh/: list.h  ptr.h  slh.h  vec.h
plugins/c/slh_c/: _plugin.py  get_slh_dir.py
plugins/c/slh_c/slh/: CMakeLists.txt
plugins/c/slh_c/template_part/: CMakeLists.txt
plugins/c/slh_c/templates/: CMakeLists.txt
plugins/c/slh_c/templates/day00/: CMakeLists.txt  part1.c
plugins/c/src/: input.c  input.h  list.c  ptr.c  slh.c  vec.c
plugins/c/tests/: CMakeLists.txt  test_list.c  test_slh.c  test_vec.c  testing.h
plugins/python/: README.md  _pypy.py  math.py  pyproject.toml
plugins/python/slh_python/: __init__.py  _plugin.py  _py312to310.py  _template_part.py  parser.py
plugins/python/tests/: test_312to310.py  test_math.py  test_parser.py
slh/: __init__.py  _calendar_html_parser.py  _commands.py  _daypart.py  _helpers.py  _main.py  _plugin_factory.py  _prompt_html_parser.py  _random_shit.py  _user_config.py  next.py  run.py  submit.py
slh/tests/: conftest.py  test_helpers.py  test_math.py  test_next.py  test_parse_prompt_html_to_md.py  test_parser.py  test_pypy.py  test_run.py
slh/tests/prompt_examples/: expected_prompt_two_articles.md.txt  prompt_one_article.html.txt  prompt_two_articles.html.txt
tests/: conftest.py  test_helpers.py  test_next.py  test_parse_prompt_html_to_md.py  test_run.py
tests/prompt_examples/: expected_prompt_one_article.md.txt
