[project]
name = "slh"
version = "0.0.0"
authors = [{ name="Tyler Smart", email="tjsmart@ucsc.edu" }]
description = "Scripts for Advent of Code."
requires-python = ">=3.12"

[project.urls]
"Homepage" = "https://github.com/tjsmart/slh"

[project.scripts]
slh = "slh._main:main"

[project.optional-dependencies]
dev = ["pytest==7.4.3"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["slh"]
exclude = ["*tests*"]

[tool.pyright]
pythonVersion = "3.12"

[tool.black]
line-length = 80
target-version = ["py312"]
