[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "slh"
version = "0.0.0"
authors = [{ name="Tyler Smart", email="tjsmart@ucsc.edu" }]
description = "Scripts for Advent of Code."
requires-python = ">=3.12"

[project.urls]
"Homepage" = "https://github.com/tjsmart/slh"

[project.scripts]
slh = "slh._main:main"

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.setuptools.packages.find]
include = ["slh"]

[tool.pyright]
pythonVersion = "3.12"

[tool.ruff.lint]
select = [
    "E", # pycodestyle (error)
    "F", # pyflakes
    "B", # bugbear
    "I", # isort
    "UP", # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
