[project]
name = "slh-c"
version = "0.0.0"
authors = [{ name="Tyler Smart", email="tjsmart@ucsc.edu" }]
description = "C plugin for SLH."
requires-python = ">=3.12"
dependencies = [
	"slh @ git+https://github.com/tjsmart/slh.git",
	"cmake>=3.21",
]

[project.urls]
"Homepage" = "https://github.com/tjsmart/slh/tree/main/plugins/c"

[project.entry-points."slh"]
c = "slh_c._plugin"

[build-system]
requires = ["setuptools", "setuptools-scm", "cmake>=3.21", "ninja"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["slh_c"]

[tool.pyright]
pythonVersion = "3.12"

[tool.black]
line-length = 80
target-version = ["py312"]

[dependency-groups]
dev = [
    "cmake>=4.1.2",
]
