[project]
name = "slh-python"
version = "0.0.0"
authors = [{ name="Tyler Smart", email="tjsmart@ucsc.edu" }]
description = "Python plugin for SLH."
requires-python = ">=3.12"
dependencies = [
	"slh @ git+https://github.com/tjsmart/slh.git",
	"pytest",
]

[project.urls]
"Homepage" = "https://github.com/tjsmart/slh/plugins/python"

[project.scripts]
py312to310 = "slh_python._py312to310:main"

[project.entry-points."slh"]
python = "slh_python._plugin"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["slh_python"]
exclude = ["*tests*"]

[tool.pyright]
pythonVersion = "3.12"

[tool.black]
line-length = 80
target-version = ["py312"]
