[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "slh-python"
version = "0.0.0"
authors = [{ name="Tyler Smart", email="tjsmart@ucsc.edu" }]
description = "Python plugin for SLH."
requires-python = ">=3.12"
dependencies = [
	"slh @ git+https://github.com/tjsmart/slh.git",
	"pytest",
]

[project.urls]
"Homepage" = "https://github.com/tjsmart/slh/tree/main/plugins/python"

[project.scripts]
py312to310 = "slh_python._py312to310:main"

[project.entry-points."slh"]
python = "slh_python._plugin"

[tool.setuptools.packages.find]
include = ["slh_python"]

[tool.pyright]
pythonVersion = "3.12"

[tool.ruff.lint]
select = [
    "E", # pycodestyle (error)
    "F", # pyflakes
    "B", # bugbear
    "I", # isort
    "UP", # pyupgrade
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
